### ---
#  Id: LOGIN-4
#  Name: Biometric login acceptance
#  Description: Accept biometric prompt and validate home screen
### ---
appId: br.com.foxbit.foxbitandroid
---
- runFlow: "../../common/setup.yaml"
- runScript: "../../common/env.js"
- runScript: "../../pages/inicio.js"
- runScript: "../../pages/login.js"
- waitForAnimationToEnd:
    timeout: 10000
- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/01_tela_inicial"
- tapOn: 
    id: ${output.INICIO.botaoLogin}

- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/02_tela_login"

- tapOn: 
    id: ${output.LOGIN.campoEmail}
- inputText: ${output.LOGIN.emailQA}
- hideKeyboard
- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/03_email_preenchido"

- tapOn: 
    id: ${output.LOGIN.campoSenha}
- inputText: ${output.LOGIN.senhaQA}
- hideKeyboard
- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/04_senha_preenchida"

- tapOn:
    id: ${output.LOGIN.botaoContinuar}

- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/05_apos_submit"
- waitForAnimationToEnd:
    timeout: 15000
- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/06_tela_final"

- assertVisible: 
    id: ${output.LOGIN.labelSalvarBiometria}

- tapOn: 
    text: ${output.LOGIN.textoSim}

- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/07_biometria_aceita"
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/08_tela_inicial_biometria"

- assertVisible: 
    id: ${output.LOGIN.labelBoasVindas}

- takeScreenshot: "${output.SCREENSHOT_DIR_DYNAMIC}/09_login_biometria_sucesso"

