appId: br.com.foxbit.foxbitandroid
---
- launchApp:
    clearState: true
- assertVisible:
    id: "bt_welcome_login"
- tapOn:
    id: "bt_welcome_login"
- tapOn:
    id: "inp_login_email"
- inputText: "isaiasilva.info@gmail.com"
- tapOn:
    id: "inp_login_password"
- inputText: "Idskhdg;jdhn@2432q"
- hideKeyboard
- tapOn:
    id: "bt_login_continue"