appId: br.com.foxbit.foxbitandroid
---
- launchApp:
    clearState: true
- assertVisible:
    id: "bt_welcome_login"
- tapOn:
    id: "bt_welcome_login"
- tapOn:
    id: "inp_login_email"
- inputText: "dsfgff"
- hideKeyboard